src/objects/Lead_Sales_Region__c.object
<CustomObject>
    <description>Holds Sales Region for converted leads</description>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_ID_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Lead ID Unique</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Lead Sales Region</label>
    <nameField>
        <label>Lead Sales Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Sales Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>